@@ -6983,7 +6983,12 @@ void ePlayerNetID::RankingLadderLog() {
                 se_onlinePlayerWriter << FilterName(p->currentTeam->Name());
                 ++num_humans;
             }
+            else
+            {
+                se_onlinePlayerWriter << "";
+            }
         }
+        se_onlinePlayerWriter << p->GetAccessLevel();
         se_onlinePlayerWriter.write();
     }
     se_numHumansWriter << num_humans;
